<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_request_page"
        android:icon="@drawable/baseline_request_page_24"
        android:title="@string/et_facturam" />

    <item
        android:id="@+id/navigation_request_quote"
        android:icon="@drawable/baseline_request_quote_24"
        android:title="@string/et_presupuestom" />

    <item
        android:id="@+id/navigation_inventory"
        android:icon="@drawable/baseline_inventory_24"
        android:title="@string/et_inventariom" />
    <item
        android:id="@+id/navigation_person_add"
        android:icon="@drawable/baseline_person_add_alt_1_24"
        android:title="@string/et_clientem" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/et_ajustesm" />
</menu>