<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoCliente">

    <TextView
        android:id="@+id/tv_clientenc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_clientenc"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_blanco2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_blanco"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_nombrenc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_nombrenc"
        android:inputType="text"
        android:textColor="#040404"
        android:textColorHint="#6C6A6C"
        android:textSize="20sp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_apellidosnc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_apellidosnc"
        android:inputType="text"
        android:textColor="#040404"
        android:textColorHint="#6C6A6C"
        android:textSize="20sp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_dninc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_dninc"
        android:inputType="text"
        android:textColor="#040404"
        android:textColorHint="#6C6A6C"
        android:textSize="20sp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_correonc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_correonc"
        android:inputType="text"
        android:textColor="#040404"
        android:textColorHint="#6C6A6C"
        android:textSize="20sp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_direccionnc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_direccionnc"
        android:inputType="text"
        android:textColor="#040404"
        android:textColorHint="#6C6A6C"
        android:textSize="20sp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_telefononc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_telefononc"
        android:inputType="text"
        android:textColor="#040404"
        android:textColorHint="#6C6A6C"
        android:textSize="20sp"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/but_guardarnc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/but_guardarnc"
        android:textColor="#000000"
        android:textSize="20sp" />
</LinearLayout>