<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_inventariovi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_inventariovi"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_blanco5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_blanco"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_nombrevi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_nombrevi"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_nombrevi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/et_blanco"
            android:inputType="text"
            android:labelFor="@+id/et_nombrevi"
            android:textColor="#040404"
            android:textColorHint="#6C6A6C"
            android:textSize="20sp"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_preciovi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_preciovi"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_preciovi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/et_blanco"
            android:inputType="text"
            android:labelFor="@+id/et_preciovi"
            android:textColor="#040404"
            android:textColorHint="#6C6A6C"
            android:textSize="20sp"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_blanco6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_blanco"
            android:textSize="20sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_guardarvi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="end"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/fab_guardarvi"
            android:src="@drawable/baseline_save_24"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_editarvi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="end"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/fab_editarvi"
            android:src="@drawable/baseline_edit_24"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_borrarvi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="end"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/fab_borrarvi"
            android:src="@drawable/baseline_restore_from_trash_24"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_volvervi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="end"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/fab_volver"
            android:src="@drawable/baseline_arrow_back_24"
            tools:ignore="MissingConstraints" />

    </LinearLayout>
</ScrollView>
