<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AjustesUsuario">

    <ScrollView
        android:id="@+id/scrollViewa"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp" >

            <TextView
                android:id="@+id/tv_ajustesa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_ajustesa"
                android:textColor="#000000"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_blanco1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_blanco"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_nombrea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/et_nombrea"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textColorHint="#6C6A6C"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/et_apellidosa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/et_apellidosa"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textColorHint="#6C6A6C"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/et_correoa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/et_correoa"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="#6C6A6C"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_contrasenaa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/et_contrasenaa"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textColorHint="#6C6A6C"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/et_concontrasenaa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/et_concontrasenaa"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="#6C6A6C"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_nombreempresaa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/et_nombreempresaa"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textColorHint="#6C6A6C"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/et_telefonoa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_telefonoa"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textColorHint="#6C6A6C"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/et_postala"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/et_postala"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textColorHint="#6C6A6C"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/et_direcciona"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/et_direcciona"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textColorHint="#6C6A6C"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/but_guardara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/but_guardara"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Button
                android:id="@+id/but_volvera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/but_volvera"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>