<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoCliente">

    <TextView
        android:id="@+id/tv_clienteni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_clienteni"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_blanco7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_blanco"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_nombreni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_nombreni"
        android:inputType="text"
        android:textColor="#040404"
        android:textColorHint="#6C6A6C"
        android:textSize="20sp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_apellidosni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_precioni"
        android:inputType="text"
        android:textColor="#040404"
        android:textColorHint="#6C6A6C"
        android:textSize="20sp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/but_guardarvi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/but_guardarni"
        android:textColor="#000000"
        android:textSize="20sp" />
</LinearLayout>